header fixed on tablet

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -11,7 +11,6 @@ body {
 }
 
 .header {
-	position: absolute;
 }
 
 #logo {
