--- a/css/tabletPortrait.css
+++ b/css/tabletPortrait.css
@@ -3,7 +3,6 @@ body {
 }
 
 .header {
-	position: absolute;
 }
 
 .content {
